2026-01-30  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.1.1 released

2026-01-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test45-force-remote-file-error): New test.

2026-01-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test26-interactive-file-name-completion):
	Simplify retrieving proper function symbols.

2026-01-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test03-file-name-defaults)
	(tramp-test10-write-region-file-precious-flag)
	(tramp-test10-write-region-other-file-name-handler)
	(tramp-test16-file-expand-wildcards)
	(tramp-test17-dired-with-wildcards)
	(tramp-test17-insert-directory-one-file)
	(tramp-test33-environment-variables-and-port-numbers)
	(tramp-test35-remote-path, tramp-test39-make-lock-file-name)
	(tramp-test39-detect-external-change, tramp-test42-utf8)
	(tramp-test43-file-system-info)
	(tramp-test44-file-user-group-ids, tramp-test48-session-timeout)
	(tramp-test49-external-backend-function)
	(tramp-test50-recursive-load): Tag them as :expensive-test.  (Bug#80164)

2026-01-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test03-file-name-defaults): Adapt test.

2025-12-31  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.8.1 released

2025-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process)
	(tramp-test30-make-process): Adapt tests.

2025-12-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process)
	(tramp-test30-make-process): Adapt tests.

2025-12-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process)
	(tramp-test30-make-process): Adapt tests.

2025-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (auto-revert-notify-watch-descriptor)
	(auto-revert-remote-files, auto-revert-use-notify): Declare.  Set
	proper values.
	(tramp-test30-make-process): Adapt test.
