@@ -1,3 +1,15 @@
+2026-02-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-archive-tests.el (tramp-archive-test20-file-modes)
+	(tramp-archive-test21-file-links): Check for `rmote-file-error'.
+
+	* tramp-tests.el (tramp-file-name-with-sudo): Declare.
+	(tramp--test-ignore-make-symbolic-link-error): Check for
+	`rmote-file-error'.
+	(tramp-test03-file-name-method-rules): Delete.
+	(tramp-test03-file-error): New test.
+	(tramp--test-supports-processes-p): Make it more rebust.
+
 2026-01-30  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.8.1.1 released
